# RelaySplit

./: .gitattributes  .gitignore  LEARNING.md  README.md
docs/: setup-machine2.md
gpu/: README.md  relaysplit_gpu.py  relaysplit_live.py  relaysplit_scnet_ab.py  relaysplit_test_client.py
plugin/: CMakeLists.txt  PHASE2.md  README.md
plugin/src/: ControlClient.cpp  ControlClient.h  InstanceRegistry.cpp  InstanceRegistry.h  PeerMatrix.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StereoFifo.h  WebRtcClient.cpp  WebRtcClient.h
server/: .env.example  README.md  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json
server/public/: index.html
server/scripts/: ws-smoke.cjs
server/src/: accounts.ts  api.ts  auth.ts  config.ts  db.ts  index.ts  presence.ts  signalling.ts  turn.ts
spike/: README.md  relaysplit_spike.py
